# NeuroFEM-Poiss

./: .gitignore  README.md  analyse_gpu_results.ipynb  analyse_neurofem_results.ipynb  analyse_results.ipynb  sp_solve_matrix.py
GPUSolver/: CMakeLists.txt  ClassicFEM.csv  Convergence.sh  LoadCuda.sh  README.md
GPUSolver/include/: ComputeModel.hpp  IO.hpp  Solver.hpp  model.hpp
GPUSolver/src/: ComputeModel.cpp  IO.cpp  Solver.cpp  main.cpp
NeuromorphicSolver/: CSR2SNN_pipeline.py  READEM.md  README.md  cleanpipeline_neurofem.py  cuda_scipy.py  generate_custom_matrices.py  neumerical_analysis.py  neurosolve.py  neurosolve_theoretical.py  numerical_analysis.py  qubo_visualization.py
data/matrix/: Sphere_00_mtx.txt  Sphere_00_rhs.txt  Sphere_00_sol.txt  Sphere_01_mtx.txt  Sphere_01_rhs.txt  Sphere_01_x0.txt
data/mesh/: N20_Gearbox00.vtk  N20_Gearbox01.vtk  Portapilas-2x2-AA_00.vtk  Sphere_00.vtk  Sphere_01.vtk
logs_results/: GPU_log.csv  Sphere_00_chipconvergence_gamma1e-3.txt  Sphere_00_chipconvergence_gamma2e-2.txt  Sphere_00_chipconvergence_gamma5e-3.txt  Sphere_01_chipconvergence_gamma1e-3.txt  Sphere_01_chipconvergence_gamma2e-2.txt
logs_results/neurofem_convergence/: Sphere_01_chipconvergence_gamma5e-3.txt
